crates/monochange/src/__tests__/snapshots/monochange__tests__add_interactive_change_file_renders_caused_by_context_for_none_bumps.snap
---
source: crates/monochange/src/__tests__/lib_tests.rs
expression: content
---
---
core:
  bump: none
  caused_by: ["sdk"]
---

# dependency follow-up
