crates/monochange/src/__tests__/snapshots/monochange__tests__read_cached_text_document_returns_error_for_nonexistent_file.snap
---
source: crates/monochange/src/__tests__/lib_tests.rs
expression: error.to_string()
---
io error: failed to read /nonexistent/path/to/file.txt: No such file or directory (os error 2)
