crates/monochange/src/__tests__/snapshots/monochange__tests__release_record_file_snapshot.snap
---
source: crates/monochange/src/__tests__/lib_tests.rs
assertion_line: 13858
expression: value
---
{
  "changedFiles": [
    "Cargo.lock"
  ],
  "changelogs": [],
  "changesets": [],
  "command": "release-pr",
  "createdAt": "[timestamp]",
  "deletedChangesets": [],
  "kind": "monochange.releaseRecord",
  "packagePublications": [],
  "provider": null,
  "releaseTargets": [
    {
      "id": "sdk",
      "kind": "group",
      "members": [
        "monochange",
        "monochange_core"
      ],
      "release": true,
      "tag": true,
      "tagName": "v1.2.3",
      "version": "1.2.3",
      "versionFormat": "primary"
    }
  ],
  "releasedPackages": [
    "monochange",
    "monochange_core"
  ],
  "schemaVersion": "0.1",
  "updatedChangelogs": [],
  "version": "1.2.3",
  "versions": {
    "sdk": "1.2.3"
  }
}
