crates/monochange/src/__tests__/snapshots/monochange__tests__render_cached_document_text_rejects_invalid_utf8.snap
---
source: crates/monochange/src/__tests__/lib_tests.rs
expression: error.to_string()
---
config error: failed to parse binary.bin as text: invalid utf-8 sequence of 1 bytes from index 0
